--- a/gms.web/Views/Home/MembershipsList.cshtml
+++ b/gms.web/Views/Home/MembershipsList.cshtml
@@ -2,33 +2,23 @@
 @using Microsoft.AspNetCore.Mvc.Localization;
 @inject IViewLocalizer localizer;
 @{
-	ViewData["Title"] = localizer["membershipslist"];
+	ViewData["Title"] = localizer["memberships_list"];
 	bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
 }
-
-<style>
-	.symbol-label {
-		background-image: url('../assets/media/svg/files/blank-image.svg') !important;
-	}
-
-	[data-bs-theme="dark"] .symbol-label {
-		background-image: url('../assets/media/svg/files/blank-image-dark.svg') !important;
-	}
-</style>
 
 <!--begin::Content wrapper-->
 <div class="d-flex flex-column flex-column-fluid">
     <!--begin::Toolbar-->
-    <div id="kt_app_toolbar" class="app-toolbar pt-6 pb-2">
+    <div id="kt_app_toolbar" class="app-toolbar" style="padding-top: 10px;">
         <!--begin::Toolbar container-->
         <div id="kt_app_toolbar_container" class="app-container container-fluid d-flex align-items-stretch">
             <!--begin::Toolbar wrapper-->
-            <div class="app-toolbar-wrapper d-flex flex-stack flex-wrap gap-4 w-100">
+			<div class="app-toolbar-wrapper d-flex flex-stack flex-wrap gap-4 w-100 px-5">
                 <!--begin::Page title-->
                 <div class="page-title d-flex flex-column justify-content-center gap-1 me-3">
                     <!--begin::Title-->
                     <h1 class="page-heading d-flex flex-column justify-content-center text-dark fw-bold fs-3 m-0">
-						@localizer["membershipslist"]
+						@localizer["memberships_list"]
                     </h1>
                     <!--end::Title-->
                     <!--begin::Breadcrumb-->
@@ -59,34 +49,63 @@
 						<!--begin::Search-->
 						<div class="d-flex align-items-center position-relative my-1">
 							<i class="ki-outline ki-magnifier fs-3 position-absolute ms-4"></i>
-							<input type="text" membership-list-filter="search" class="form-control w-250px ps-12" placeholder="@localizer["searchbymembershipname"]" />
+							<input type="text" memberships-list-filter="search" class="form-control w-250px ps-12" placeholder="@localizer["search_by_membership_name"]" />
 						</div>
 						<!--end::Search-->
 					</div>
 					<!--end::Card title-->
 					<!--begin::Card toolbar-->
 					<div class="card-toolbar flex-row-fluid justify-content-end gap-5">
-						<!--begin::Flatpickr-->
-						<div class="input-group w-250px">
-							<input class="form-control rounded rounded-end-0" placeholder="@localizer["pickdaterange"]" id="kt_ecommerce_sales_flatpickr" />
-							<button class="btn btn-icon btn-light" id="kt_ecommerce_sales_flatpickr_clear">
-								<i class="ki-outline ki-cross fs-2"></i>
+						<!--begin::Filter-->
+						<div>
+							<button type="button" class="btn btn-icon btn-light-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-@(IsRTL ? "start" : "end")" data-bs-toggle="tooltip" title="@localizer["filter"]" data-bs-custom-class="tooltip-inverse">
+								<i class="ki-solid ki-filter fs-2"></i>
 							</button>
+							<!--begin::Filter Menu-->
+							<div class="menu menu-sub menu-sub-dropdown w-300px w-md-325px" data-kt-menu="true">
+								<!--begin::Header-->
+								<div class="px-7 py-5">
+									<div class="fs-5 text-dark fw-bold">@localizer["filter_options"]</div>
+								</div>
+								<!--end::Header-->
+								<!--begin::Separator-->
+								<div class="separator border-gray-200"></div>
+								<!--end::Separator-->
+								<!--begin::Content-->
+								<div class="px-7 py-5" memberships-list-filter="form">
+									<!--begin::Filter Creation DateRange-->
+									<div class="mb-5">
+										<label class="form-label fs-6 fw-semibold ms-2">@localizer["creation_date"]:</label>
+										<div class="input-group">
+											<input class="form-control rounded" placeholder="@localizer["pick_date_range"]" memberships-list-creation-date-range-filter="filter" />
+										</div>
+									</div>
+									<!--end::Filter Creation DateRange-->
+									<!--begin::Filter Membership Status-->
+									<div class="mb-5">
+										<label class="form-label fs-6 fw-semibold ms-2">@localizer["membership_status"]:</label>
+										<select class="form-select" data-control="select2" data-hide-search="true" data-placeholder="@localizer["select_an_option"]" memberships-list-filter="status">
+											<option></option>
+											<option value="@localizer["active"].Value">@localizer["active"]</option>
+											<option value="@localizer["inactive"].Value">@localizer["inactive"]</option>
+										</select>
+									</div>
+									<!--end::Filter Membership Status-->
+									<!--begin::Actions-->
+									<div class="d-flex justify-content-end">
+										<button type="reset" class="btn btn-light btn-active-light-primary fw-semibold me-2 px-6" data-kt-menu-dismiss="true" memberships-list-table-reset="reset">@localizer["reset"]</button>
+										<button type="submit" class="btn btn-primary fw-semibold px-6" data-kt-menu-dismiss="true" memberships-list-table-filter="filter">@localizer["apply"]</button>
+									</div>
+									<!--end::Actions-->
+								</div>
+								<!--end::Content-->
+							</div>
+							<!--end::Filter Menu-->
 						</div>
-						<!--end::Flatpickr-->
-						<!--begin::Select Status-->
-						<div class="w-100 mw-150px">
-							<select class="form-select" data-control="select2" data-hide-search="true" data-placeholder="@localizer["status"]" membership-list-filter="status">
-								<option></option>
-								<option value="all">@localizer["all"]</option>
-								<option value="@localizer["active"].Value">@localizer["active"]</option>
-								<option value="@localizer["inactive"].Value">@localizer["inactive"]</option>
-							</select>
-						</div>
-						<!--end::Select Status-->
+						<!--end::Filter-->
 						<!--begin::Add Membership-->
 						<a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_invite_friends">
-							<i class="ki-outline ki-plus fs-2"></i>@localizer["addnewmembership"]
+							<i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_membership"]
 						</a>
 						<!--end::Add Membership-->
 					</div>
@@ -96,31 +115,23 @@
 				<!--begin::Card body-->
 				<div class="card-body pt-0">
 					<!--begin::Table-->
-					<table class="table align-middle table-row-dashed fs-6" id="membership_list">
+					<table class="table align-middle table-row-dashed fs-6" id="membership-list">
 						<thead>
 							<tr class="text-start text-gray-800 fw-bold fs-7 gs-0">
-								<th class="text-center min-w-50px">@localizer["photo"]</th>
-								<th class="text-start min-w-150px">@localizer["membershipname"]</th>
+								<th class="text-start min-w-150px">@localizer["membership_name"]</th>
 								<th class="text-start min-w-100px">@localizer["duration"]</th>
 								<th class="text-start min-w-100px">@localizer["price"]</th>
-								<th class="text-start min-w-100px">@localizer["signupfee"]</th>
+								<th class="text-start min-w-100px">@localizer["signup_fee"]</th>
 								<th class="text-center min-w-100px">@localizer["status"]</th>
-								<th class="text-center min-w-100px">@localizer["creationdate"]</th>
+								<th class="text-center min-w-100px">@localizer["creation_date"]</th>
 								<th class="text-center min-w-100px">@localizer["actions"]</th>
 							</tr>
 						</thead>
 						<tbody class="fw-semibold text-gray-700">
 							<tr>
-								<td class="text-center">
-									<!--begin::Thumbnail-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="symbol symbol-circle symbol-50px">
-										<span class="symbol-label"></span>
-									</a>
-									<!--end::Thumbnail-->
-								</td>
 								<td class="text-start">
 									<!--begin::Title-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">Gold Membership</a>
+									<a href="#" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">Gold Membership</a>
 									<!--end::Title-->
 								</td>
 								<td class="text-start">
@@ -152,16 +163,9 @@
 								</td>
 							</tr>
 							<tr>
-								<td class="text-center">
-									<!--begin::Thumbnail-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="symbol symbol-circle symbol-50px">
-										<span class="symbol-label" style="background-image:url('../assets/media//stock/ecommerce/1.png') !important;"></span>
-									</a>
-									<!--end::Thumbnail-->
-								</td>
 								<td class="text-start">
 									<!--begin::Title-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">Silver Membership</a>
+									<a href="#" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">Silver Membership</a>
 									<!--end::Title-->
 								</td>
 								<td class="text-start">
@@ -190,16 +194,9 @@
 								</td>
 							</tr>
 							<tr>
-								<td class="text-center">
-									<!--begin::Thumbnail-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="symbol symbol-circle symbol-50px">
-										<span class="symbol-label"></span>
-									</a>
-									<!--end::Thumbnail-->
-								</td>
 								<td class="text-start">
 									<!--begin::Title-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">Bronze Membership</a>
+									<a href="#" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">Bronze Membership</a>
 									<!--end::Title-->
 								</td>
 								<td class="text-start">
@@ -228,16 +225,9 @@
 								</td>
 							</tr>
 							<tr>
-								<td class="text-center">
-									<!--begin::Thumbnail-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="symbol symbol-circle symbol-50px">
-										<span class="symbol-label"></span>
-									</a>
-									<!--end::Thumbnail-->
-								</td>
 								<td class="text-start">
 									<!--begin::Title-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">Free Trial</a>
+									<a href="#" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">Free Trial</a>
 									<!--end::Title-->
 								</td>
 								<td class="text-start">
@@ -266,16 +256,9 @@
 								</td>
 							</tr>
 							<tr>
-								<td class="text-center">
-									<!--begin::Thumbnail-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="symbol symbol-circle symbol-50px">
-										<span class="symbol-label"></span>
-									</a>
-									<!--end::Thumbnail-->
-								</td>
 								<td class="text-start">
 									<!--begin::Title-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">تجربة مجانية</a>
+									<a href="#" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">تجربة مجانية</a>
 									<!--end::Title-->
 								</td>
 								<td class="text-start">
@@ -304,16 +287,9 @@
 								</td>
 							</tr>
 							<tr>
-								<td class="text-center">
-									<!--begin::Thumbnail-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="symbol symbol-circle symbol-50px">
-										<span class="symbol-label"></span>
-									</a>
-									<!--end::Thumbnail-->
-								</td>
 								<td class="text-start">
 									<!--begin::Title-->
-									<a href="../../demo39/dist/apps/ecommerce/catalog/edit-product.html" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">Free Trial</a>
+									<a href="#" class="text-gray-800 text-hover-primary fs-5 fw-bold" membership-list-filter="membership_name">Free Trial</a>
 									<!--end::Title-->
 								</td>
 								<td class="text-start">
@@ -355,4 +331,4 @@
 </div>
 <!--end::Content wrapper-->
 
-<script type="module" src="~/assets/js/customJs/MembershipList.js"></script>
+<script type="module" src="~/assets/js/customJs/MembershipsList.js"></script>
