--- a/gms.web/Views/Shared/_Layout.cshtml
+++ b/gms.web/Views/Shared/_Layout.cshtml
@@ -1498,6 +1498,9 @@
 	<script src="~/assets/plugins/custom/datatables/datatables.bundle.js"></script>
 	<script src="~/assets/plugins/custom/vis-timeline/vis-timeline.bundle.js"></script>
 	<script src="~/assets/plugins/custom/formrepeater/formrepeater.bundle.js"></script>
+
+	<script src="~/assets/plugins/custom/fslightbox/fslightbox.bundle.js"></script>
+
 	<script src="https://cdn.amcharts.com/lib/5/index.js"></script>
 	<script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
 	<script src="https://cdn.amcharts.com/lib/5/percent.js"></script>
