Edit Layout And Add Section Scripts In Views

--- a/gms.web/Views/Home/AddNewMembership.cshtml
+++ b/gms.web/Views/Home/AddNewMembership.cshtml
@@ -288,4 +288,6 @@
 </div>
 <!--end::Content wrapper-->
 
-<script type="module" src="~/assets/js/customJs/AddNewMembership.js"></script>
+@section Scripts {
+	<script type="module" src="~/assets/js/customJs/AddNewMembership.js"></script>
+}
