--- a/gms.web/Views/Home/MembersList.cshtml
+++ b/gms.web/Views/Home/MembersList.cshtml
@@ -510,5 +510,6 @@
 	<!--end::Content-->
 </div>
 <!--end::Content wrapper-->
-
-<script type="module" src="~/assets/js/customJs/MembersList.js"></script>
+@section Scripts {
+	<script type="module" src="~/assets/js/customJs/MembersList.js"></script>
+}
