--- a/gms.web/Views/Home/MembershipsList.cshtml
+++ b/gms.web/Views/Home/MembershipsList.cshtml
@@ -327,5 +327,6 @@
     <!--end::Content-->
 </div>
 <!--end::Content wrapper-->
-
-<script type="module" src="~/assets/js/customJs/MembershipsList.js"></script>
+@section Scripts {
+	<script type="module" src="~/assets/js/customJs/MembershipsList.js"></script>
+}
