--- a/gms.web/Views/Home/StaffsList.cshtml
+++ b/gms.web/Views/Home/StaffsList.cshtml
@@ -440,5 +440,6 @@
 	<!--end::Content-->
 </div>
 <!--end::Content wrapper-->
-
-<script type="module" src="~/assets/js/customJs/StaffsList.js"></script>
+@section Scripts {
+	<script type="module" src="~/assets/js/customJs/StaffsList.js"></script>
+}
