--- a/gms.web/Views/Home/AddNewStaff.cshtml
+++ b/gms.web/Views/Home/AddNewStaff.cshtml
@@ -317,5 +317,6 @@
 	<!--end::Content-->
 </div>
 <!--end::Content wrapper-->
-
-<script type="module" src="~/assets/js/customJs/AddNewStaff.js"></script>
+@section Scripts {
+	<script type="module" src="~/assets/js/customJs/AddNewStaff.js"></script>
+}
