Add Back Identity Entities

--- a/gms.web/Views/Shared/_LoginPartial.cshtml
+++ b/gms.web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using gms.data.Models.Identity
 
 @inject SignInManager<GymUserEntity> SignInManager
 @inject UserManager<GymUserEntity> UserManager
