--- a/gms.web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/gms.web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using gms.web.Areas.Identity
 @using gms.web.Areas.Identity.Pages
+@using gms.data.Models.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
