--- a/gms.web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/gms.web/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,83 +1,200 @@
 ﻿@page
 @model LoginModel
+@using System.Globalization
 
 @{
-    ViewData["Title"] = "Log in";
+    Layout = null;
+    bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
+    ViewData["Title"] = "Sign in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-                <div class="form-floating mb-3">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                    <label asp-for="Input.Email" class="form-label">Email</label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-floating mb-3">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password" />
-                    <label asp-for="Input.Password" class="form-label">Password</label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="checkbox mb-3">
-                    <label asp-for="Input.RememberMe" class="form-label">
-                        <input class="form-check-input" asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
-                    </label>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
+<!DOCTYPE html>
+<html @(IsRTL ? "direction=rtl dir=rtl style=direction: rtl" : "lang=en")>
+<!--begin::Head-->
+<head>
+    <title>@ViewData["Title"] | gms</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="~/assets/media/logos/favicon.ico" />
+
+    <!--begin::Fonts(mandatory for all pages)-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!--end::Fonts-->
+    <!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
+    <link href="~/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="~/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+    <!--end::Global Stylesheets Bundle-->
+</head>
+<!--end::Head-->
+<!--begin::Body-->
+<body id="kt_body" class="app-blank bgi-size-cover bgi-attachment-fixed bgi-position-center">
+    <!--begin::Theme mode setup on page load-->
+    <script>var defaultThemeMode = "light"; var themeMode; if (document.documentElement) { if (document.documentElement.hasAttribute("data-bs-theme-mode")) { themeMode = document.documentElement.getAttribute("data-bs-theme-mode"); } else { if (localStorage.getItem("data-bs-theme") !== null) { themeMode = localStorage.getItem("data-bs-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-bs-theme", themeMode); }</script>
+    <!--end::Theme mode setup on page load-->
+    <!--begin::Root-->
+    <div class="d-flex flex-column flex-root" id="kt_app_root">
+        <!--begin::Page bg image-->
+        <style>
+            body {
+                background-image: url('../../../assets/media/auth/bg10.jpeg');
             }
-        </section>
-    </div>
-</div>
 
-@section Scripts {
+            [data-bs-theme="dark"] body {
+                background-image: url('../../../assets/media/auth/bg10-dark.jpeg');
+            }
+        </style>
+        <!--end::Page bg image-->
+        <!--begin::Authentication - Sign-in -->
+        <div class="d-flex flex-column flex-lg-row flex-column-fluid">
+            <!--begin::Aside-->
+            <div class="d-flex flex-lg-row-fluid d-none d-lg-flex d-xl-flex">
+                <!--begin::Content-->
+                <div class="d-flex flex-column flex-center pb-0 pb-lg-10 p-10 w-100">
+                    <!--begin::Image-->
+                    <img class="theme-light-show mx-auto mw-200 w-250px w-lg-400px mb-5" src="~/assets/media/illustrations/sigma-1/17.png" alt="" />
+                    <img class="theme-dark-show mx-auto mw-200 w-250px w-lg-400px mb-5" src="~/assets/media/illustrations/sigma-1/17-dark.png" alt="" />
+                    <!--end::Image-->
+                    <!--begin::Title-->
+                    <h1 class="text-gray-800 fs-2qx fw-bold text-center mb-7">Fast, Efficient and Productive</h1>
+                    <!--end::Title-->
+                    <!--begin::Text-->
+                    <div class="text-gray-600 fs-base text-center fw-semibold">
+                        In this kind of post,
+                        <a href="#" class="opacity-75-hover text-primary me-1">the blogger</a>introduces a person they’ve interviewed
+                        <br />and provides some background information about
+                        <a href="#" class="opacity-75-hover text-primary me-1">the interviewee</a>and their
+                        <br />work following this is a transcript of the interview.
+                    </div>
+                    <!--end::Text-->
+                </div>
+                <!--end::Content-->
+            </div>
+            <!--begin::Aside-->
+            <!--begin::Body-->
+            <div class="d-flex flex-column-fluid flex-lg-row-auto justify-content-center justify-content-lg-end align-items-center p-12">
+                <!--begin::Wrapper-->
+                <div class="bg-body d-flex flex-column flex-center rounded-4 w-md-600px p-10" style="height: fit-content;flex-grow: 1;">
+                    <!--begin::Content-->
+                    <div class="d-flex flex-center flex-column align-items-stretch h-lg-100 w-md-400px">
+                        <!--begin::Wrapper-->
+                        <div class="d-flex flex-center flex-column flex-column-fluid pb-15 pb-lg-10 pt-lg-10">
+                            <div class="app-header-logo d-flex align-self-start pb-10" id="kt_app_header_logo">
+                                <!--begin::Logo-->
+                                <a href="#" class="app-sidebar-logo">
+                                    <img alt="Logo" src="/assets/media/logos/demo39.svg" class="h-25px theme-light-show">
+                                    <img alt="Logo" src="/assets/media/logos/demo39-dark.svg" class="h-25px theme-dark-show">
+                                </a>
+                                <!--end::Logo-->
+                            </div>
+                            <!--begin::Form-->
+                            <form class="form w-100 fv-plugins-bootstrap5 fv-plugins-framework" id="account" method="post">
+                                <!--begin::Body-->
+                                <div class="card-body">
+                                    <!--begin::Heading-->
+                                    <div class="text-center mb-10">
+                                        <!--begin::Title-->
+                                        <h1 class="text-gray-900 mb-3 fs-2x" data-kt-translate="sign-in-title">
+                                            Sign In
+                                        </h1>
+                                        <!--end::Title-->
+                                        @*<!--begin::Text-->
+                                        <div class="text-gray-500 fw-semibold fs-6" data-kt-translate="general-desc">
+                                        Your Gym System
+                                        </div>
+                                        <!--end::Link-->*@
+                                    </div>
+                                    <!--begin::Heading-->
+                                    <!--begin::Input group--->
+                                    <div class="fv-row mb-8 fv-plugins-icon-container">
+                                        <!--begin::Email-->
+                                        <input asp-for="Input.Email" class="form-control form-control-solid" autocomplete="username" aria-required="true" placeholder="Email" />
+                                        <!--end::Email-->
+                                        <div class="fv-plugins-message-container fv-plugins-message-container--enabled invalid-feedback"></div>
+                                        <span asp-validation-for="Input.Email" class="fv-plugins-message-container fv-plugins-message-container--enabled invalid-feedback"></span>
+                                    </div>
+                                    <!--end::Input group--->
+                                    <div class="fv-row mb-7 fv-plugins-icon-container">
+                                        <!--begin::Password-->
+                                        <input asp-for="Input.Password" class="form-control form-control-solid" autocomplete="current-password" aria-required="true" placeholder="password" />
+                                        <!--end::Password-->
+                                        <span asp-validation-for="Input.Password" class="fv-plugins-message-container fv-plugins-message-container--enabled invalid-feedback"></span>
+                                    </div>
+                                    <!--end::Input group--->
+                                    <!--begin::Wrapper-->
+                                    <div class="d-flex flex-stack flex-wrap gap-3 fs-base fw-semibold mb-10">
+                                        <!--begin::Sign up-->
+                                        <div class="text-gray-500 text-center fw-semibold fs-6">
+                                            Not a Member yet?
+                                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="link-primary">Sign up</a>
+                                        </div>
+                                        <!--end::Sign up-->
+                                        <!--begin::Link-->
+                                        <a id="forgot-password" asp-page="./ForgotPassword" class="link-primary">
+                                            Forgot Password ?
+                                        </a>
+                                        <!--end::Link-->
+                                    </div>
+                                    <!--end::Wrapper-->
+                                    <!--begin::Actions-->
+                                    <div class="d-flex flex-stack">
+                                        <!--begin::Submit-->
+                                        @*<button id="kt_sign_in_submit" class="btn btn-primary me-2 flex-shrink-0">
+                                        <!--begin::Indicator label-->
+                                        <span class="indicator-label" data-kt-translate="sign-in-submit">
+                                        Sign In
+                                        </span>
+                                        <!--end::Indicator label-->
+                                        <!--begin::Indicator progress-->
+                                        <span class="indicator-progress">
+                                        <span data-kt-translate="general-progress">Please wait...</span>
+                                        <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
+                                        </span>
+                                        <!--end::Indicator progress-->
+                                        </button>*@
+                                        <button id="login-submit" type="submit" class="btn btn-primary me-2 flex-shrink-0">Sign In</button>
+                                        <!--end::Submit-->
+                                        <!--begin::Social-->
+                                        <div class="d-flex align-items-center">
+                                            <div class="text-gray-500 fw-semibold fs-6 me-3 me-md-6" data-kt-translate="general-or">Or</div>
+                                            <!--begin::Symbol-->
+                                            <a href="#" class="symbol symbol-circle symbol-45px w-45px bg-light me-3">
+                                                <img alt="Logo" src="~/assets/media/svg/brand-logos/google-icon.svg" class="p-4">
+                                            </a>
+                                            <!--end::Symbol-->
+                                            <!--begin::Symbol-->
+                                            <a href="#" class="symbol symbol-circle symbol-45px w-45px bg-light me-3">
+                                                <img alt="Logo" src="~/assets/media/svg/brand-logos/facebook-3.svg" class="p-4">
+                                            </a>
+                                            <!--end::Symbol-->
+                                        </div>
+                                        <!--end::Social-->
+                                    </div>
+                                    <!--end::Actions-->
+                                </div>
+                                <!--begin::Body-->
+                            </form>
+                            <!--end::Form-->
+                        </div>
+                        <!--end::Wrapper-->
+                    </div>
+                    <!--end::Content-->
+                </div>
+                <!--end::Wrapper-->
+            </div>
+            <!--end::Body-->
+        </div>
+        <!--end::Authentication - Sign-in-->
+    </div>
+    <!--end::Root-->
+    <!--begin::Javascript-->
+    <!--begin::Global Javascript Bundle(mandatory for all pages)-->
+    <script src="~/assets/plugins/global/plugins.bundle.js"></script>
+    <script src="~/assets/js/scripts.bundle.js"></script>
+    <!--end::Global Javascript Bundle-->
     <partial name="_ValidationScriptsPartial" />
-}
+    <!--end::Javascript-->
+</body>
+<!--end::Body-->
+</html>
