--- a/gms.web/Views/_ViewImports.cshtml
+++ b/gms.web/Views/_ViewImports.cshtml
@@ -7,6 +7,9 @@
 ﻿@using System.Globalization;
 @using gms.common.ViewModels;
 @using gms.data.Models;
+
+@using gms.common.Models.Activity;
+
 @inject IViewLocalizer localizer;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
