Update CountryEntity And Finish SignUp Page

--- a/gms.web/Views/ActivityCategory/Create.cshtml
+++ b/gms.web/Views/ActivityCategory/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model CreateActivityCategoryDTO
+﻿@using gms.common.Models.ActivityCat.ActivityCategory
+@model CreateActivityCategoryDTO
 @{
     ViewData["Title"] = "Create New";
 }
