--- a/gms.web/Views/ActivityCategory/Index.cshtml
+++ b/gms.web/Views/ActivityCategory/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using gms.common.Models.ActivityCat.ActivityCategory
 @model List<ActivityCategoryDTO>
 @{
     ViewData["Title"] = "Activity Category";
