--- a/gms.web/Views/_ViewImports.cshtml
+++ b/gms.web/Views/_ViewImports.cshtml
@@ -8,7 +8,7 @@
 @using gms.common.ViewModels;
 @using gms.data.Models;
 
-@using gms.common.Models.Activity;
+@using gms.common.Models.ActivityCat.Activity;
 
 @inject IViewLocalizer localizer;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
